--- a/style.css
+++ b/style.css
@@ -105,6 +105,10 @@ li, a {
 .leaf_left{
     position: absolute;
     animation: animation4 1s ease-in 2s 1 forwards;
+    width: 30%;
+    top: 0%;
+    z-index: -10;
+    left: -10%;
 }
 .header{
     display: grid;
@@ -119,10 +123,10 @@ li, a {
     width: 100%;
 }
 .col-1 h2 {
-font-size: 65px;
+    font-size: clamp(1.5rem , 7vw , 4.5rem);
 font-weight: 700;
-line-height: 70px;
 letter-spacing: 0em;
+line-height: 1.2;
 text-align: left;
 color: var(--primaryClr);
 z-index: 10;
@@ -190,6 +194,7 @@ z-index: 10;
     left: 65%;
     transform: translate(-50%,-50%);
     box-shadow: 0px 12.2182px 27.0545px rgba(0, 0, 0, 0.15);
+    word-wrap: none;
 }
 .floatingCard > div{
     display: flex;
@@ -275,46 +280,103 @@ z-index: 10;
         opacity: 1;
     }
 }
+@media (max-width:768px) {
+    .col-1{
+        grid-column: 1 / 13;
+        grid-row-gap: 5rem;
+    }
+    .col-2{
+        grid-row: 2;
+        grid-column: 1 / 13;
+        margin-top: 6rem;
+    }
+    .plater1 {
+        width: 30%;
+        left:  -5%;
+        top: -5%;
+        transform: translate(-50%,-50%);
+        z-index: -1;
+    
+        animation: animation 1s ease-in 1s 1 forwards;
+    }
+}
 /* Heading Style End */
 
 /* Second Section Style Start */
 .header1{
+    overflow-x: hidden;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     padding-block: 9rem;
     place-items: center;
 }   
 .header1 > *:nth-child(1){
-    border: 2px solid red;
     grid-row: 1;
     grid-column: 1 / 6;
 }
 .header1 > *:nth-child(2){
-    border: 2px solid red;
     grid-row: 1;
-    grid-column: 6 / 13;
+    grid-column: 7 / 13;
     position: relative;
     z-index: -1;
 
+}
+.scene{
+    max-width: 600px;
+    width: 100%;
+}
+.scene > img{
+    object-fit: cover;
+    object-position: center;
+}
+
+.header1 h2{
+    font-size: clamp(1.5rem , 7vw + 1.5rem , 3.5rem);
+    line-height: 1.3;
+    text-transform: capitalize;
+    color: var(--primaryClr);
+}
+.header1 p{
+    margin-top: 1rem;
+}
+.button{
+    border: 2px soild blue;
+    font-size: 1rem;
+    margin-top: 2rem;
 }
 .cycleContainer{
     position: absolute;
     top: 5%;
     left: 10%;
+    overflow: hidden;
 }
 .cycle{
-    border: 2px solid red;
     z-index: 10;
-    animation: cycle 10s ease-in-out infinite forwards;
+    animation: cycle 15s ease-in-out 1s infinite forwards;
 }
 
 @keyframes cycle {
     0%{
-        transform: translateX(400%);
-
+        transform: translateX(-50%);
+        opacity: 1;
     }
     100%{
-        transform: translateX(0%);
+        transform: translateX(200%);
+        opacity: 0;
+    }
+}
+
+@media (max-width: 768px) {
+    .header1{
+        /* overflow-x: hidden; */
+    }
+    .header1 > *:nth-child(1){
+        grid-column: 1 / 13;
+        /* grid-row-gap: 3rem; */
+    }
+    .header1 > *:nth-child(2){
+        grid-row: 2;
+        grid-column: 1 / 13;
     }
 }
 /* Second Section Style End */
