nav bar is done

--- a/style.css
+++ b/style.css
@@ -99,16 +99,27 @@ li, a {
     background-color: var(--primaryClrHover);
     color: var(--secondaryTextClr);
 }
+.hamburder{
+    display: none;
+}
+@media (max-width:768px) {
+    .nav{
+        display: none;
+    }
+    .hamburder {
+        display: block;
+    }
+}
 /* Nav bar Style End */
 
 /* Heading Style Start */
 .leaf_left{
     position: absolute;
     animation: animation4 1s ease-in 2s 1 forwards;
-    width: 30%;
+    width: 50%;
     top: 0%;
     z-index: -10;
-    left: -10%;
+    /* left: -10%; */
 }
 .header{
     display: grid;
@@ -123,13 +134,13 @@ li, a {
     width: 100%;
 }
 .col-1 h2 {
-    font-size: clamp(1.5rem , 7vw , 4.5rem);
-font-weight: 700;
-letter-spacing: 0em;
-line-height: 1.2;
-text-align: left;
-color: var(--primaryClr);
-z-index: 10;
+    font-size: clamp(1.5rem , 7vw + 1.5rem , 3.5rem);
+    font-weight: 700;
+    letter-spacing: 0em;
+    line-height: 1.2;
+    text-align: left;
+    color: var(--primaryClr);
+    z-index: 10;
 }
 .col-1 p{
     color: var(--shadowClrDark);
@@ -141,6 +152,7 @@ z-index: 10;
     z-index: -1;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     width: 100%;
     border-radius: 2rem;
     box-sizing: border-box;
@@ -156,9 +168,24 @@ z-index: 10;
 }
 .col-1 > div > input {
     border: transparent;
-    width: 80%;
-    margin-left: 1rem;
+    /* width: 80%; */
+    /* margin-left: 1rem; */
+    background-color: transparent;
+    padding-block: 1rem;
+    padding-inline: 1rem;
+    border: transparent;
+    outline: none;
 
+}
+::placeholder{
+    text-transform: capitalize;
+}
+.headerBtn{
+    background-color: var(--primaryClr);
+    padding-block: 1rem;
+    padding-inline: 1.5rem;
+    border: 3px solid var(--primaryClr);
+    border-radius: 2rem;
 }
 .col-2{
     display: flex;
@@ -199,7 +226,7 @@ z-index: 10;
 .floatingCard > div{
     display: flex;
     align-items: center;
-    font-size: 2rem;
+    font-size: clamp(1.1rem , 3vw , 1.9rem);
     gap: 1rem;
     color: var(--secondaryClr)
 }
@@ -299,6 +326,14 @@ z-index: 10;
     
         animation: animation 1s ease-in 1s 1 forwards;
     }
+    .leaf_left{
+        position: absolute;
+        animation: animation4 1s ease-in 2s 1 forwards;
+        width: 50%;
+        top: 0%;
+        z-index: -10;
+        left: -10%;
+    }
 }
 /* Heading Style End */
 
@@ -307,8 +342,9 @@ z-index: 10;
     overflow-x: hidden;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    padding-block: 9rem;
+    padding-block: 5rem;
     place-items: center;
+    gap: 2rem;
 }   
 .header1 > *:nth-child(1){
     grid-row: 1;
@@ -316,7 +352,7 @@ z-index: 10;
 }
 .header1 > *:nth-child(2){
     grid-row: 1;
-    grid-column: 7 / 13;
+    grid-column: 8 / 13;
     position: relative;
     z-index: -1;
 
